--- a/portfolio/portfolio/acceptance_test/acceptance_test_log.html
+++ b/portfolio/portfolio/acceptance_test/acceptance_test_log.html
@@ -124,6 +124,266 @@
                         Reversal Count = 0 <br>
                     </td>
                 </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj8group17acceptance1.pass">proj8group17acceptance1.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with some passengers that arrive at 2nd floor at same time and go to different floors <br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382415433501<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">1609.116s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 3931.279<br> <!--Performance Scores-->
+                        Satisfaction: 361.083<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj8group17acceptance1.stats">
+                        <span style="text-decoration: underline;">elevator-proj8group17acceptance1.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 1 <br>
+                        NoCall Count = 13 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance1.pass">proj7acceptance1.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with light passenger arrivals distributed evenly over all floors. <br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382413949243<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">7160.158s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 2777.343<br> <!--Performance Scores-->
+                        Satisfaction: 321.889<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance1.pass_1.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance1.pass_1.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 0 <br>
+                        NoCall Count = 52 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance1.pass">proj7acceptance1.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with light passenger arrivals distributed evenly over all floors. <br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414004708<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">7156.579s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 2771.085<br> <!--Performance Scores-->
+                        Satisfaction: 319.889<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance1.pass_2.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance1.pass_2.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 0 <br>
+                        NoCall Count = 52 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance1.pass">proj7acceptance1.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with light passenger arrivals distributed evenly over all floors. <br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414057858<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">7159.595s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 2776.993<br> <!--Performance Scores-->
+                        Satisfaction: 311.389<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance1.pass_3.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance1.pass_3.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 0 <br>
+                        NoCall Count = 52 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance2.pass">proj7acceptance2.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with a little more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414518506<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">3135.082s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 7982.931<br> <!--Performance Scores-->
+                        Satisfaction: 388.087<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance2.pass_1.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance2.pass_1.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 4 <br>
+                        NoCall Count = 13 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance2.pass">proj7acceptance2.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with a little more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414551813<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">3127.01s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 7800.755<br> <!--Performance Scores-->
+                        Satisfaction: 390.913<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance2.pass_2.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance2.pass_2.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 3 <br>
+                        NoCall Count = 12 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance2.pass">proj7acceptance2.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with a little more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414589732<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">3601.917s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 8452.431<br> <!--Performance Scores-->
+                        Satisfaction: 385.792<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance2.pass_3.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance2.pass_3.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 4 <br>
+                        NoCall Count = 12 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance3.pass">proj7acceptance3.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414733616<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">2395.631s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 5327.286<br> <!--Performance Scores-->
+                        Satisfaction: 432.727<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance3.pass_1.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance3.pass_1.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 6 <br>
+                        NoCall Count = 9 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance3.pass">proj7acceptance3.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382414787834<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">2388.612s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 5059.687<br> <!--Performance Scores-->
+                        Satisfaction: 440.422<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance3.pass_2.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance3.pass_2.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 6 <br>
+                        NoCall Count = 9 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;"><a href="proj7acceptance3.pass">proj7acceptance3.pass</a><br>
+                    </td>
+                    <td style="vertical-align: top;"> Short run with more passenger arrivals distributed not evenly over all floors.<br> <!--Discription-->
+                    </td>
+                    <td style="vertical-align: top;">all passengers delivered / <br> <!--Test Status-->
+                    </td>
+                    <td style="vertical-align: top;">1382415055576<br> <!--Random Seed-->
+                    </td>
+                    <td style="vertical-align: top;">2874.128s<br> <!--Time to Complete-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Delivery: 6036.982<br> <!--Performance Scores-->
+                        Satisfaction: 390.020<br>
+                    </td>
+                    <td style="vertical-align: top;"><a href="elevator-proj7acceptance3.pass_3.stats">
+                        <span style="text-decoration: underline;">elevator-proj7acceptance3.pass_3.stats</span></a><br>
+                    </td>
+                    <td style="vertical-align: top;"> <!--Notes-->
+                    </td>
+                    <td style="vertical-align: top;">
+                        Overweight Count = 8 <br>
+                        NoCall Count = 10 <br>
+                        Reversal Count = 0 <br>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <br>
