--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1917,7 +1917,7 @@
         &nbsp;&nbsp;&nbsp; 6.9.1&nbsp; Drive[s,d] shall be set to [STOP, STOP]. <br>
         &nbsp;&nbsp;&nbsp; 6.9.2&nbsp; mDriveSpeed[s,d] shall be set to [0, STOP]. <br>
 		  6.10&nbsp;&nbsp;&nbsp; If currentFloor is not equal to mDesiredFloor AND mDoorClosed is True AND mDoorMotor is Stop, then: <br>
-        &nbsp;&nbsp;&nbsp; 6.10.1&nbsp; Drive[s,d] shall be set to [FAST, desiredDirection]. <br>
+        &nbsp;&nbsp;&nbsp; 6.10.1&nbsp; Drive[s,d] shall be set to [SLOW, desiredDirection]. <br>
         &nbsp;&nbsp;&nbsp; 6.10.2&nbsp; mDriveSpeed[s,d] shall be set to [v, desiredDirection]. <br>
 		  6.11&nbsp;&nbsp;&nbsp; If currentFloor == mDesiredFloor AND mLevel[*] is False, then: <br>
         &nbsp;&nbsp;&nbsp; 6.11.1&nbsp; Drive[s,d] shall be set to [Level, d]. <br>
@@ -2087,7 +2087,7 @@
                     <td style="vertical-align: top;">T6.11<br>
                     </td>
                     <td style="vertical-align: top;">
-						  Drive.s != STOP AND DesiredFloor height - mCarLevelPosition <= 1m 
+						  Drive.s != STOP AND DesiredFloor height - mCarLevelPosition >= 1m 
 						  <br>
                     </td>
                 </tr>
@@ -2095,7 +2095,7 @@
                     <td style="vertical-align: top;">T6.12<br>
                     </td>
                     <td style="vertical-align: top;">
-						  mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
+						  (Drive.s != STOP AND DesiredFloor height - mCarLevelPosition is less than 1m)&nbsp; OR mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
 							mHoistwayLimitUp&nbsp;&larr;&nbsp;True&nbsp; OR
 							mHoistwayLimitDown&nbsp;&larr;&nbsp;True&nbsp; 
 						  <br>
@@ -2105,7 +2105,7 @@
                     <td style="vertical-align: top;">T6.13<br>
                     </td>
                     <td style="vertical-align: top;">
-						  Drive.s != STOP AND mCarLevelPosition - DesiredFloor height <= 1m &nbsp;
+						  Drive.s != STOP AND mCarLevelPosition - DesiredFloor height >= 1m &nbsp;
 						  <br>
                     </td>
                 </tr>
@@ -2113,7 +2113,7 @@
                     <td style="vertical-align: top;">T6.14<br>
                     </td>
                     <td style="vertical-align: top;">
-						  mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
+						  (Drive.s != STOP AND mCarLevelPosition - DesiredFloor height is less than 1m)&nbsp; OR mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
 							mHoistwayLimitUp&nbsp;&larr;&nbsp;True&nbsp; OR
 							mHoistwayLimitDown&nbsp;&larr;&nbsp;True&nbsp; 
 						  <br>
@@ -2596,13 +2596,13 @@
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
-						  <td style="vertical-align: top;">X<br>
-                    </td>
-						  <td style="vertical-align: top;">X<br>
-                    </td>
 						  <td style="vertical-align: top;"><br>
                     </td>
 						  <td style="vertical-align: top;"><br>
+                    </td>
+						  <td style="vertical-align: top;">X<br>
+                    </td>
+						  <td style="vertical-align: top;">X<br>
                     </td>
                 </tr>
 					 <tr>
@@ -2748,13 +2748,13 @@
                     </td>
                     <td style="vertical-align: top;">X<br>
                     </td>
-						  <td style="vertical-align: top;">X<br>
-                    </td>
-						  <td style="vertical-align: top;">X<br>
-                    </td>
 						  <td style="vertical-align: top;"><br>
                     </td>
 						  <td style="vertical-align: top;"><br>
+                    </td>
+						  <td style="vertical-align: top;">X<br>
+                    </td>
+						  <td style="vertical-align: top;">X<br>
                     </td>
                 </tr>
 					 <tr>
@@ -2898,15 +2898,15 @@
                     </td>
 						  <td style="vertical-align: top;"><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-						  <td style="vertical-align: top;"><br>
-                    </td>
-						  <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
 						  <td style="vertical-align: top;">X<br>
                     </td>
 						  <td style="vertical-align: top;">X<br>
+                    </td>
+						  <td style="vertical-align: top;"><br>
+                    </td>
+						  <td style="vertical-align: top;"><br>
                     </td>
                 </tr>
 					 <tr>
@@ -2974,15 +2974,15 @@
                     </td>
 						  <td style="vertical-align: top;"><br>
                     </td>
-                    <td style="vertical-align: top;"><br>
-                    </td>
-						  <td style="vertical-align: top;"><br>
-                    </td>
-						  <td style="vertical-align: top;"><br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
 						  <td style="vertical-align: top;">X<br>
                     </td>
 						  <td style="vertical-align: top;">X<br>
+                    </td>
+						  <td style="vertical-align: top;"><br>
+                    </td>
+						  <td style="vertical-align: top;"><br>
                     </td>
                 </tr>
 					 <tr>
