--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -1072,7 +1072,7 @@ Requirements/Constraints</b></u></td>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1086,7 +1086,7 @@ Requirements/Constraints</b></u></td>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1100,7 +1100,7 @@ Requirements/Constraints</b></u></td>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1116,7 +1116,7 @@ Requirements/Constraints</b></u></td>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -1130,7 +1130,7 @@ Requirements/Constraints</b></u></td>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
